# remdisp

./: Cargo.toml  build.rs
remdisp-cli/: .gitattributes  Cargo.toml  build.rs
remdisp-cli/examples/: test_window.rs
remdisp-cli/proto/: control.proto
remdisp-cli/sample_data/: README.md  sample.h264  sample.hevc
remdisp-cli/sample_data/evdi_framebufs/: mode.json
remdisp-cli/sample_data/yuv_frames/: 11.yuv  12.yuv  14.yuv  18.yuv  23.yuv  5.yuv  7.yuv  meta.json
remdisp-cli/src/: .gitattributes  lib.rs  main.rs  prelude.rs  send_or_log.rs  status_helpers.rs
remdisp-cli/src/av/: converter.rs  decoder.rs  mod.rs  yuv_frame.rs
remdisp-cli/src/av/encoder/: codec_options.rs  mod.rs
remdisp-cli/src/control/: mod.rs
remdisp-cli/src/control/encoder/: codec_options.rs  converter.rs  mod.rs
remdisp-cli/src/control_plane/: control.rs  display.rs  mod.rs
remdisp-cli/src/data_plane/: control.rs  display.rs  mod.rs
remdisp-cli/src/data_plane/control/: encoder.rs
remdisp-cli/src/data_plane/control/encoder/: converter.rs
remdisp-cli/src/display/: displayer.rs  info.rs  mod.rs  window.rs
src/: control.rs  lib.rs  main.rs  remote.rs  testing.cpp  wrapper.c
