[package]
name = "remdisp-cli"
version = "0.1.0"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["control", "display"]
control = ["evdi"]
display = ["sdl2", "xrandr", "monitor-control-win"]

[dependencies]
anyhow = "1.0.38"
cfg-if = "1.0.0"
clap = "2.33.3"
tonic = "0.4.0"
prost = "0.7.0"
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "fs"
] }
lazy_static = "1.4.0"
parking_lot = "0.11.1"
ffmpeg-sys-next = "4.3.5"
rand = "0.8.3"
tokio-stream = "0.1.4"
futures = "0.3.13"
async-trait = "0.1.48"
tracing = "0.1.25"
thiserror = "1.0.24"
derivative = "2.2.0"
libc = "0.2.91"
bytes = "1.0.1"
printf = "0.1.0"
# Used iff control
evdi = { version = "0.6.0", optional = true, features = ["serde"] }
# Used iff display
sdl2 = { version = "0.34.3", optional = true, features = [
    "unsafe_textures"
], path = "../../rust-sdl2" }

[target.'cfg(target_os="linux")'.dependencies]
# Used iff display
xrandr = { version = "0.1.0", path = "../../xrandr-rs", optional = true }

[target.'cfg(target_os="windows")'.dependencies]
# Used iff display
monitor-control-win = { version = "0.1.0", path = "../../monitor-control-win", optional = true }

[build-dependencies]
built = "0.4.4"
tonic-build = "0.4.0"
anyhow = "1.0.38"
prost-build = "0.7.0"

[patch.crates-io]
evdi = { git = "https://github.com/danielzfranklin/evdi-rs.git" }
drm-fourcc = { git = "https://github.com/danielzfranklin/drm-fourcc-rs.git" }
test-env-log = { git = "https://github.com/danielzfranklin/test-env-log" }

[dev-dependencies]
tokio-test = "0.4.1"
test-env-log = { version = "0.2.5", features = ["trace-pretty"] }
tracing-flame = "0.1.0"
tracing-subscriber = "0.2.17"
env_logger = "0.8.3"
serde_json = "1.0.64"
serde = "1.0.125"
